# heterogenity_habanero_loopfunctions

./: argos.sh
data/: argos.sh  data_analysis.ipynb  run_experiment.py  score.csv  score_aggregation.txt
execution/: build_scenario.py  score_aggregation.txt
loop-functions/: CMakeLists.txt
loop-functions/communication/: CMakeLists.txt  CommAggLoopFunc.cpp  CommAggLoopFunc.h  CommHomLoopFunc.cpp  CommHomLoopFunc.h  CommTskLoopFunc.cpp  CommTskLoopFunc.h
loop-functions/habanero/: CMakeLists.txt  HabAgLoopFunc.cpp  HabAgLoopFunc.h  HabDecLoopFunc.cpp  HabDecLoopFunc.h  HabHzLoopFunc.cpp  HabHzLoopFunc.h  HabHzRevLoopFunc.cpp  HabHzRevLoopFunc.h  HabPaStLoopFunc.cpp  HabPaStLoopFunc.h  HabRenLoopFunc.cpp  HabRenLoopFunc.h  HabStLoopFunc.cpp  HabStLoopFunc.h
loop-functions/heterogeneity/: CMakeLists.txt  HeteroAggLoopFunc.cpp  HeteroAggLoopFunc.h  HeteroChLoopFunc.cpp  foraging.argos
loop-functions/memory/: CMakeLists.txt  CommAggLoopFunc.cpp  CommAggLoopFunc.h  CommHomLoopFunc.cpp  CommHomLoopFunc.h  MemoryAggLoopFunc.cpp  MemoryTskLoopFunc.cpp  MemoryTskLoopFunc.h
scenarios/communication/: ag-100.argos  ag-20.argos  aggregation.argos  argos.sh  hm-100.argos  hm-20.argos  homing.argos  tasking.argos  ts-100.argos  ts-20.argos
scenarios/communication/data/: data_analysis.ipynb  score.csv  score_homing.txt
scenarios/communication/execution/: argos.sh  execution.py
scenarios/heterogeneity/: aggregation.argos  argos.sh  build_scenario.py  chain_robots.argos  execution.py  prueba1.argos
scenarios/memory/: aggregation.argos  aggregation_habanero.argos  aggregation_tuttifrutti.argos  argos.sh  build_scenario.py  execution.py  homing.argos  prueba1.argos  tasking copy 2.argos  tasking copy.argos  tasking.argos
scenarios/memory/data/: data_analysis.ipynb  score.csv  score_aggregation.txt  score_homing.txt  score_tasking.txt
scenarios/phormica/: habAggregation.argos  habDecision.argos  habHazard.argos  habHazardReverse.argos  habPatchStop.argos  habRendezvous.argos  habStop.argos
